# smart-File-Organizer

./: Cargo.toml  README.md
.smart_organizer/: history.json
src/: errors.rs  history.rs  logger.rs  main.rs  organizer.rs  rules.rs  ui_cli.rs  ui_gui.rs
test/: .DS_Store_(1)_(1)  Screen Recording 2025-07-23 at 12.16.32 PM_(1)_(1).mov  index_(1)_(1).html
