[package]
name = "smart_file_organizer"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
fern = "0.6"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
rfd = "0.14"
parking_lot = "0.12"
crossbeam-channel = "0.5"
anyhow = "1"

# GUI
eframe = { version = "0.27", default-features = true, features = ["glow"] }
egui   = "0.27"
